[package]
name = "cnnvd-provider"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.68", features = ["backtrace"] }
futures = "0.3.26"
reqwest = { version = "0.11.14", features = ["json"] }
sea-orm = { version = "0.10.7", features = ["with-chrono","sqlx-postgres", "runtime-tokio-rustls", "macros","postgres-array"] }
serde = "1.0.152"
serde-xml-rs = "0.6.0"
tokio = { version = "1.25.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber ={version="*",features = ["fmt","std","env-filter"]}
serde_json ="*"
sqlx={version ="*",features = ["postgres","runtime-tokio-rustls"]}
salvo = "0.37.9"
